trying to fix footer alignment problem

--- a/css/styles.css
+++ b/css/styles.css
@@ -480,7 +480,10 @@ label {
     footer {
     	width: 80vw;
     }
-   
+   .wrapper {
+   	text-align: left;
+   }
+
 }
 
 
